# open_workinghours

./: .easignore  .gitignore  .mcp.json  .vercelignore  CALENDAR_MIGRATION_PLAN.md  CLAUDE.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  LICENSE  MODULE_2_DATA_FLOW.md  MODULE_2_PLAN.md  MONTH_VIEW_UX_PLAN.md  PHASE_3_DEPLOYMENT_GUIDE.md  README.md  TODO.md  app.json  backend_plan.md  blueprint.md  claude.md  create_splash.py  docker-compose.yml  integration-testing-plan.md  package.json  pnpm-lock.yaml  privacy_architecture.md  proxy.ts  text.txt  to-do.md
backend/: .dockerignore  .env.example  ADMIN_DASHBOARD.md  ARCHITECTURE.md  Dockerfile  README.md  SESSION_PROGRESS.md  check_status.sh  create_test_data.py  debug_jwt.py  deploy.sh  dev.db  docker-compose.yml  monitoring.sql  pyproject.toml  pytest.ini  run_aggregation.sh  setup_monitoring.sh  test_api.sh  test_jwt.py  test_work_events.sh
backend/alembic/: env.py
backend/app/: aggregation.py  cleanup.py  config.py  database.py  dependencies.py  email.py  main.py  models.py  periods.py  rate_limit.py  schemas.py  security.py  social_auth.py  taxonomy.py
backend/open_workinghours_backend.egg-info/: SOURCES.txt  requires.txt
backend/scripts/: seed_demo_user.py  simulate_aggregation.py  test_migrations_pg.py
backend/tests/: __init__.py  conftest.py  test_admin_release_cells.py  test_aggregation.py  test_auth.py  test_dp_group_stats_foundation.py  test_feedback.py  test_finalized_weeks.py  test_healthz.py  test_security_hardening.py  test_social_auth.py  test_stats.py  test_taxonomy.py  (+1 more)
(+501 files in other folders)
