[project]
name = "open-workinghours-backend"
version = "0.1.0"
description = "Backend service for anonymised physician working hours reporting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.0.1,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.1.0,<3.2.0",
    "alembic>=1.13.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "requests>=2.31.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "httpx>=0.26.0,<0.27.0",
    "ruff>=0.1.15,<0.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
